<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.blacksharktech.xavier.HowToFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical">

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
        android:text="@string/scanningProblems"
        android:textColor="@android:color/black"
        android:textSize="24sp"
                  android:layout_gravity="center"
                  android:textAlignment="center"
                  android:layout_marginBottom="8dp"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"
            android:text="@string/mrzLocation"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"
                android:text="@string/documentCentered"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"
                android:text="@string/reduceGlare"/>

        <TextView
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dimLighting"/>

        <TextView
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/moveDocument"/>

        <TextView
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/landscapeMode"/>

        <TextView
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/moveHand"/>


    </LinearLayout>

</FrameLayout>