<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.blacksharktech.xavier.ResultsActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageResult"
                android:adjustViewBounds="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:columnCount="2">

                <TextView
                    android:text="Raw MRZ"
                    android:textSize="18sp"
                    android:layout_columnSpan="2"
                    android:textStyle="bold"
                    android:paddingTop="12dp"
                    />
                <TextView
                    android:id="@+id/mrzText"
                    android:typeface="monospace"
                    android:layout_columnSpan="2"
                    />

                <TextView
                    android:text="Data"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_columnSpan="2"
                    android:paddingTop="12dp"
                    />

                <TextView
                    android:text="@string/given_name"
                    android:id="@+id/given_name_label"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_marginStart="16dp"
                    android:id="@+id/given_name"
                    />

                <TextView
                    android:text="@string/surname"
                    android:id="@+id/surname_label"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_marginStart="16dp"
                    android:id="@+id/surname"
                    />

                <TextView
                    android:text="@string/birthdate"
                    android:id="@+id/birthdate_label"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_marginStart="16dp"
                    android:id="@+id/birthdate"
                    />
                <TextView
                    android:text="@string/doc_type"
                    android:id="@+id/doc_type_label"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_marginStart="16dp"
                    android:id="@+id/doc_type"
                    />

                <TextView
                    android:text="@string/doc_number"
                    android:id="@+id/doc_number_label"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_marginStart="16dp"
                    android:id="@+id/doc_number"
                    />
                <TextView
                    android:text="@string/issuing_state"
                    android:id="@+id/issuing_state_label"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_marginStart="16dp"
                    android:id="@+id/issuing_state"
                    />
                <TextView
                    android:text="@string/nationality"
                    android:id="@+id/nationality_label"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_marginStart="16dp"
                    android:id="@+id/nationality"
                    />

                <TextView
                    android:text="@string/gender"
                    android:id="@+id/gender_label"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_marginStart="16dp"
                    android:id="@+id/gender"
                    />

                <TextView
                    android:text="@string/expiration"
                    android:id="@+id/expiration_label"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_marginStart="16dp"
                    android:id="@+id/expiration"
                    />

                <TextView
                    android:text="@string/optional"
                    android:id="@+id/optional_label"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_marginStart="16dp"
                    android:id="@+id/optional"
                    />
                <TextView
                    android:text="Optional Data 2:"
                    android:id="@+id/optional_data_2_label"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_marginStart="16dp"
                    android:id="@+id/optional_2"
                    />
                <TextView
                    android:text="Document Number Check:"
                    android:id="@+id/doc_num_check_label"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_marginStart="16dp"
                    android:id="@+id/doc_num_check"
                    />
                <TextView
                    android:text="Birth Date Check:"
                    android:id="@+id/birth_date_check_label"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_marginStart="16dp"
                    android:id="@+id/birth_date_check"
                    />
                <TextView
                    android:text="Expiration Date Check:"
                    android:id="@+id/expiration_check_label"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_marginStart="16dp"
                    android:id="@+id/expiration_check"
                    />
                <TextView
                    android:text="Optional Data Check:"
                    android:id="@+id/optional_check_label"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_marginStart="16dp"
                    android:id="@+id/optional_check"
                    />
                <TextView
                    android:text="Composite Check:"
                    android:id="@+id/composite_check_label"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_marginStart="16dp"
                    android:id="@+id/composite_check"
                    />

                <TextView
                    android:text="Metrics"
                    android:textSize="18sp"
                    android:layout_columnSpan="2"
                    android:paddingTop="12dp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:text="Scanner active:"
                    android:id="@+id/scanner_active_label"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_marginStart="16dp"
                    android:id="@+id/scanner_active"
                    />

            </GridLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>