<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.blacksharktech.xavier.ContactFragment">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_marginTop="8dp"
                  android:layout_marginStart="8dp"
                  android:layout_marginEnd="8dp"
                  android:orientation="vertical">

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:textSize="24sp"
                  android:layout_marginBottom="4dp"
                  android:textAlignment="center"
                  android:textColor="@android:color/black"
                  android:text="@string/toBuy"/>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="horizontal" android:weightSum="7"
        android:layout_marginBottom="4dp">
            <View android:layout_width="0dp" android:layout_weight="3" android:layout_height="4dp"
                  android:layout_gravity="center_vertical"
                  android:background="@color/colorPrimaryDark"/>
            <ImageView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"
            android:src="@drawable/ic_money_filled"/>
            <View android:layout_width="0dp" android:layout_weight="3" android:layout_height="4dp"
                  android:layout_gravity="center_vertical"
                  android:background="@color/colorPrimaryDark"/>
        </LinearLayout>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:id="@+id/email"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="16dp"
                android:textAlignment="center"
                android:text="@string/email"/>

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:textSize="24sp"
                  android:textAlignment="center"
                  android:layout_marginBottom="3dp"
                  android:textColor="@android:color/black"
                  android:text="@string/moreInfo"/>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="horizontal" android:weightSum="7"
                      android:layout_marginBottom="4dp">
            <View android:layout_width="0dp" android:layout_weight="3" android:layout_height="4dp"
                  android:layout_gravity="center_vertical"
                  android:background="@color/colorPrimaryDark"/>
            <ImageView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"
                       android:src="@drawable/ic_web"/>
            <View android:layout_width="0dp" android:layout_weight="3" android:layout_height="4dp"
                  android:layout_gravity="center_vertical"
                  android:background="@color/colorPrimaryDark"/>
        </LinearLayout>


        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:autoLink="web"
                  android:textSize="18sp"
                  android:textColor="@android:color/black"
                  android:textColorLink="@android:color/holo_blue_dark"
                  android:layout_marginBottom="16dp"
                  android:layout_marginStart="8dp"
                  android:textAlignment="center"
                  android:layout_marginEnd="8dp"
                  android:text="@string/website"/>

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:textSize="24sp"
                  android:textAlignment="center"
                  android:layout_marginBottom="4dp"
                  android:textColor="@android:color/black"
                  android:text="@string/rateUs"/>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="horizontal" android:weightSum="7" android:layout_marginBottom="4dp">
            <View android:layout_width="0dp" android:layout_weight="3" android:layout_height="4dp"
                  android:layout_gravity="center_vertical"
                  android:background="@color/colorPrimaryDark"/>
            <ImageView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"
                       android:src="@drawable/ic_star"/>
            <View android:layout_width="0dp" android:layout_weight="3" android:layout_height="4dp"
                  android:layout_gravity="center_vertical"
                  android:background="@color/colorPrimaryDark"/>
        </LinearLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rate"
                android:textColor="@android:color/black"
                android:id="@+id/rate"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:textAlignment="center"
                android:textSize="18sp"/>
        <Button
                android:layout_width="200dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:textColor="@android:color/white"
                android:text="@string/clickRate"
                android:id="@+id/rateButton"
        />

    </LinearLayout>

</FrameLayout>